--- a/project.json
+++ b/project.json
@@ -6,13 +6,14 @@
     "UiPath.Excel.Activities": "2.10.4",
     "UiPath.Mail.Activities": "1.10.4",
     "UiPath.System.Activities": "21.4.0",
-    "UiPath.UIAutomation.Activities": "21.4.3"
+    "UiPath.UIAutomation.Activities": "21.4.3",
+    "UiPath.WebAPI.Activities": "1.7.0"
   },
   "webServices": [],
   "entitiesStores": [],
   "schemaVersion": "4.0",
   "studioVersion": "21.4.3.0",
-  "projectVersion": "1.0.10",
+  "projectVersion": "1.0.13",
   "runtimeOptions": {
     "autoDispose": false,
     "isPausable": true,
@@ -32,7 +33,8 @@
     "libraryOptions": {
       "includeOriginalXaml": false,
       "privateWorkflows": [
-        "NewActivity.xaml"
+        "NewActivity.xaml",
+        "ProcessCallTest.xaml"
       ]
     },
     "processOptions": {
